get data to recipe api on recipe pages.

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,10 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner&family=Emilys+Candy&family=Poppins:wght@400;500;700;800&family=Rubik+Moonrocks&family=Work+Sans:wght@400;500&display=swap");
     </style>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -28,7 +31,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <title>Recipe Management System</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
