--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>Recipe Management System</title>
+    <title>Meal Recipe</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
